<resources>
    <string name="nom">Nom : </string>
    <string name="une_date">Selectionnez une date : </string>
    <string name="annuler">Annuler</string>
    <string name="ok">Ok</string>

    <string name="app_name">وصلة المقدسية</string>
    <string name="next">التالي</string>
    <string name="appdef">الوصلة المقدسية </string>
    <string name="start">البداية</string>
    <string name="information">معلومات</string>
    <string name="about">من نحن</string>
    <string name="exit">خروج</string>
    <string name="score">النتيجة : </string>
    <string name="youranswer">إجابتك</string>
    <string name="description">وصلة المقدسية وصلة المقدسيةوصلة المقدسيةوصلة المقدسية\n وصلة المقدسيةوصلة المقدسيةوصلة المقدسية\n وصلة المقدسيةوصلة المقدسيةوصلة المقدسية</string>
    <string-array name="questions">
        <!-- 1 --><item>مسجد ضمه الإحتلال الصهيوني إلى التراث العبري في ٢١_٢٠_٢٠١٠</item>
        <!-- 2 --><item>_سمي بالتسوية الجنوبية الشرقية ، وفي الإحتلال الصليبي للقدس حول إلى إسطبل واليوم هو أكبر مصلى في المسجد الأقصى</item>
        <!-- 3 --><item>_إسم أطلقه الرومان على القدس قديما ، وعرفت به عندهم ، و إستعمله النبي صل الله عليه وسلم والصحابة رضي الله عنهم ..</item>
        <!-- 4 --><item>على يد من كانت المحرقة التي كانت في ٢١_٠٨_١٩٦٩ في المسجد الأقصى وخسر فيها المسجد منبر نور الدين زنكي</item>
        <!-- 5 --><item>باب سمي على أبناء يعقوب عليه السلام ، ويقع شمال شرق الصور الشرقي للمسجد الأقصى</item>
        <!-- 6 --><item>من مدارس المسجد الأقصى تقع بالقرب من باب السلسلة وتعد الأجمل على الإنطلاق</item>
        <!-- 7 --><item>من أسمائه الباب اليماني وباب النبي ...</item>
        <!-- 8 --><item>_كان عهده العهد الذهبي للعمارة في القدس وفيه عهده بنيت قبة الصخرة</item>
        <!-- 9 --><item>_هو مصلى في المسجد الأقص حول إلى متحف داخله ..</item>
        <!-- 10 --><item>بني أول مرة من الأخشاب ، بناه عمر إبن الخطاب ثم أعاد بناءه الوليد إبن عبد الملك ب١٥ رواق وبفعل الزلازل قلص عددهم إلى ٧ أروقة</item>
        <!-- 11 --><item>من أهم المعابد المسيحية ، رفض عمر الصلاة فيها بعد الفتح العمري حتى يحافض عنها ...</item>
        <!-- 12 --><item>_ مغارة تقع تحت الصخرة داخل قبة الصخرة</item>
        <!-- 13 --><item>باب بالمسجد الأقصى أخذ إسمه من  الترجمة للعربية لإسم  الملك الذي بناه</item>
        <!-- 14 --><item>حول إسمه إلى حائط المبكى بعد إحتلال حارة المغاربة  ويقول اليهود زورا أنه من جدران المعبد المزعوم ...</item>
        <!-- 15 --><item>كان قائد الوفد المغاربي في التحرير الصلاحي لمدينة القدس</item>
        <!-- 16 --><item>يعد أهم مكان مقدس بالنسبة للمسحيين بالقدس ، وقداسة المدينة من قداسته عندهم وهو via dolosa ماذا نعني به</item>
        <!-- 17 --><item>_ما إسم السورة التي كتبت على جدان قبة الصخرة من الخارج ...</item>
        <!-- 18 --><item>من الأبواب المغلقة في المسجد الأقصى ، يقع بالصور الغربي له ، ويعتقد المسيحيون أن المسيح سيدخل منه عند نزوله</item>
        <!-- 19 --><item>أقتبس إسمه من القرآن الكريم ، من سورة البقرة بالتحديد ، يفتح في صلواة الفجر والمغرب والعشاء</item>
        <!-- 20 --><item>باب يسمى بباب الأنبياء وكذلك باب الملك فيصل ، لكن إسمه الفلسطيني يطلق عليه إسم</item>
        <!-- 21 --><item>من الجبال الواقعة في المدينة المقدسة ، حمل إسمه هذا بعد الفتح العمري للمدينة</item>
        <!-- 22 --><item>إستغرق البُنات سبع سنين في بنائه ، من المهندزين القائمين عله رجاء إبن حيوة الكندي</item>
        <!-- 23 --><item>أحد مصليات المسجد الأقصى ، حول الآن إلى مكتبة ومدرسة لتحفيض القرآن</item>
        <!-- 24 --><item>قبة هي مركز المسجد الأقصى ، بناها عبد الملك بن مروان</item>
        <!-- 25 --><item>تسمى كذلك بمئذنة باب المغاربة</item>
        <!-- 26 --><item>من أهم المعارك التي جرت في غزة ، وكانت بقيارة المضفر قطز ...</item>
        <!-- 27 --><item>دمر قلعة "بارخوخبا" وبنى مكانها قلعة أخرى سماها العرب "خربة اليهود" ومنع اليهود من دخول المدينة المقدسة بقرار سري ٢٠٠ عام</item>
        <!-- 28 --><item>        يوم كبر أو سبت السبوت أحد أعياد اليهود يكون في اليوم التاسع من شهر تشرين في السنة العبرية ، وقد بدأ في القرن الخامس قبل الميلاد
</item>
        <!-- 29 --><item>كانت بقيادته المعركة التي قال عنها الله تعالى في سورة الروم (١-٥) وإستطاع أن يسيطر على القدس بمساعدة اليهود</item>
        <!-- 30 --><item>حدث في هذا العام ٦٢٠ حادثة الإسراء وكان الإسراء من البيت الحرام إلى المسجد الأقصى والمعراج من الأقصى إلى السموات العلى</item>
        <!-- 31 --><item>صلى به النبي صل الله عليه وسلم ب "ثلاثة مائة " من الرسل و "مائة وأربعة وعشرون ألفا" من الأنبياء</item>
        <!-- 32 --><item>إسترد الروم القدس بقيادته في العام ٥ للهجرة أي سنة ٦٢٧ للميلاد ، وشارك كذلك اليهود في هذه المعركة لأن الفرس لم يثقوا بهم</item>
        <!-- 33 --><item>ذكر الله تعالى ( ... في أدنى الأرض وهم من بعد غلبهم سيغلبون (٣)في بضع سنين ...) كم كان عدد السنين</item>
        <!-- 34 --><item>كلمة وردت في رسالته صل الله عليه وسلم لهرقل في العام ٦ للهجرة وتعني الروم بمجمعهم "فإن لم تسلم فعليك إثم ........"</item>
        <!-- 35 --><item>غزوة من غزوات النبي صل الله عليه وسلم كانت في العام ٧ للهجرة أي سنة ٦٢٩ للميلاد وكانت ضد اليهود</item>
        <!-- 36 --><item>أحد الصحابة وأحد الخلفاء الراشدين أجلا اليهود من المدينة ، وطردهم من شبه جزيرة العرب بسبب قتلهم أحد المسلمين ونكثم العهد الذي قطعوه بعد الغزوة</item>
        <!-- 37 --><item>معركة وقعت جنوب غربي القدس العام ١٣ هـ ، وهي من المعارك الرئيسية ضد الروم ، قطع فيها خالد بن الوليد الصحراء الملتهبة في خمسة أيام ليساند جيش أبا عبيدة</item>
        <!-- 38 --><item>من معارك المسلمين ضد الروم كانوا فيها بتعداد ٣٢ ألفا وكان الروم ٢٠٠ ألف مقاتل وقتل منهم ١٣٠ ألفا</item>
        <!-- 39 --><item>ليحرر المسلمون القدس نهجوا نهج تحرير ما حولها ثم تكون هي الأخيرة ، فحرر هذا القائد غزة ونابلس واللد ورفح وغيرها</item>
        <!-- 40 --><item>كان حصار القدس بقيادة أبو عبيدة رضي الله عنه ، ودام .......... أشهر ، وضيق المسلمون فيه على الروم حتى قبلوا الصلح شريطة قدوم عمر رضي الله عنه</item>
        <!-- 41 --><item>أحد الذين شهدوا على العهدة العمرية مع خالد بن الوليد وعمرو بن العاص وعبد الرحمن بن عوف</item>
        <!-- 42 --><item>سورة صلى بها عمر بن الخطاب رضي الله عنه الركعتين في صلاتهم الأولى في المسجد الأقصى بعد تنظيفه مع سورة الإسراء</item>
        <!-- 43 --><item>خلف الباب "غريغوري" في دعوته للحملة الصليبية على المسلمين وإحتال المدينة المقدسة بدعوا أن المسلمين يؤذون الحجاج المسيح لها</item>
        <!-- 44 --><item>حملة تبعت حملة الراهب "بطرس الناسك " و"بيتر المفلس" ، شاركت فيها الجيوش المنظمة لحكام الدول الأوروبية</item>
        <!-- 45 --><item>هاجم المدينة المقدسة حاصرها إثنين وأربعين يوما وكانت المجازر داخل المدينة المقدسة بسبب اعطائه الأوامر بالقتل الجماعي ....</item>
        <!-- 46 --><item>القائد "مودود" أول من قاد جيشا لإعادة بيت المقدس لكنه أغتيل على يد فرقة من الفرق الباطنية الضالة فرقة</item>
    </string-array>

    <string-array name="answers">
        <!-- 1 --><item>المسجد الإبراهيمي في الخليل</item>
        <!-- 2 --><item>المصلى المرواني</item>
        <!-- 3 --><item>إيلياء</item>
        <!-- 4 --><item>دينيس مايكل روهان</item>
        <!-- 5 --><item>باب الأسباط</item>
        <!-- 6 --><item>الأشرفية</item>
        <!-- 7 --><item>باب المغاربة</item>
        <!-- 8 --><item>عبد الملك بن مروان</item>
        <!-- 9 --><item>مصلى المغاربة</item>
        <!-- 10 --><item>الجامع القبلي</item>
        <!-- 11 --><item>كنيسة القيامة</item>
        <!-- 12 --><item>مغارة الأرواح</item>
        <!-- 13 --><item>باب الحديد</item>
        <!-- 14 --><item>حائط البراق</item>
        <!-- 15 --><item>بومدين الغوثي</item>
        <!-- 16 --><item>طرق الألآم</item>
        <!-- 17 --><item>سورة ياسين</item>
        <!-- 18 --><item>الرحمة والتوبة</item>
        <!-- 19 --><item>باب حطة</item>
        <!-- 20 --><item>باب العتم</item>
        <!-- 21 --><item>جبل المكبر</item>
        <!-- 22 --><item>قبة الصخرة</item>
        <!-- 23 --><item>مصلى النساء</item>
        <!-- 24 --><item>قبة السلسلة</item>
        <!-- 25 --><item>المئذنة الفخرية</item>
        <!-- 26 --><item>عين جالوت</item>
        <!-- 27 --><item>هدريان</item>
        <!-- 28 --><item>الغفران</item>
        <!-- 29 --><item>كسرى الثاني</item>
        <!-- 30 --><item>عام الحزن</item>
        <!-- 31 --><item>المسجد الأقصى</item>
        <!-- 32 --><item>هرقل</item>
        <!-- 33 --><item>سبعة</item>
        <!-- 34 --><item>الأريسيين</item>
        <!-- 35 --><item>خيبر</item>
        <!-- 36 --><item>عمر بن الخطاب</item>
        <!-- 37 --><item>أجاندين</item>
        <!-- 38 --><item>اليرموك</item>
        <!-- 39 --><item>عمرو بن العاص</item>
        <!-- 40 --><item>أربعة</item>
        <!-- 41 --><item>معاوية</item>
        <!-- 42 --><item>صاد</item>
        <!-- 43 --><item>أوربان الثاني</item>
        <!-- 44 --><item>الأمراء</item>
        <!-- 45 --><item>جوديفري ديفيون</item>
        <!-- 46 --><item>الحشاشين</item>
    </string-array>
    <string-array name="alphabet">
        <item>أ</item>
        <item>ب</item>
        <item>ت</item>
        <item>ث</item>
        <item>ج</item>
        <item>ح</item>
        <item>خ</item>
        <item>د</item>
        <item>ذ</item>
        <item>ر</item>
        <item>ز</item>
        <item>ش</item>
        <item>س</item>
        <item>ص</item>
        <item>ض</item>
        <item>ظ</item>
        <item>ط</item>
        <item>ع</item>
        <item>غ</item>
        <item>ف</item>
        <item>ق</item>
        <item>ك</item>
        <item>ل</item>
        <item>م</item>
        <item>ن</item>
        <item>ه</item>
        <item>و</item>
        <item>ي</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>0</item>
    </string-array>
    <string name="info">
        معلومات حول القدس تساعد في الأسئلة والأجوبة
                معلومات حول القدس تساعد في الأسئلة والأجوبة
                معلومات حول القدس تساعد في الأسئلة والأجوبة
                معلومات حول القدس تساعد في الأسئلة والأجوب
        معلومات حول القدس تساعد في الأسئلة والأجوبة
                معلومات حول القدس تساعد في الأسئلة والأجوبة

                معلومات حول القدس تساعد في الأسئلة والأجوبة
        معلومات حول القدس تساعد في الأسئلة والأجوبة
        معلومات حول القدس تساعد في الأسئلة والأجوبة
        معلومات حول القدس تساعد في الأسئلة والأجوبة
        معلومات حول القدس تساعد في الأسئلة والأجوبة
        معلومات حول القدس تساعد في الأسئلة والأجوبة
        معلومات حول القدس تساعد في الأسئلة والأجوبة
        معلومات حول القدس تساعد في الأسئلة والأجوبة
        معلومات حول القدس تساعد في الأسئلة والأجوبة
        معلومات حول القدس تساعد في الأسئلة والأجوبة
        معلومات حول القدس تساعد في الأسئلة والأجوبة
        معلومات حول القدس تساعد في الأسئلة والأجوبة
        معلومات حول القدس تساعد في الأسئلة والأجوبة
        معلومات حول القدس تساعد في الأسئلة والأجوبة
        معلومات حول القدس تساعد في الأسئلة والأجوبة
        معلومات حول القدس تساعد في الأسئلة والأجوبة
        معلومات حول القدس تساعد في الأسئلة والأجوبة
        معلومات حول القدس تساعد في الأسئلة والأجوبة
        معلومات حول القدس تساعد في الأسئلة والأجوبة
        معلومات حول القدس تساعد في الأسئلة والأجوبة
        معلومات حول القدس تساعد في الأسئلة والأجوبة
        معلومات حول القدس تساعد في الأسئلة والأجوبة


    </string>
</resources>