<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quds">

    <Button
        android:text="@string/start"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:id="@+id/start"
        android:background="@drawable/shape"
        android:textSize="25dp"

        android:layout_above="@+id/information"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/information"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:id="@+id/information"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:textSize="25dp"
        android:background="@drawable/shape"
        android:layout_alignParentEnd="true"
        />

    <Button
        android:text="@string/about"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:id="@+id/about"
        android:background="@drawable/shape"
        android:textSize="25dp"
        android:layout_below="@+id/information"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/exit"
        android:layout_height="80dp"
        android:id="@+id/exit"
        android:textSize="25dp"
        android:background="@drawable/shape"
        android:layout_width="200dp"
        android:layout_below="@+id/about"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/appdef"
        android:textSize="70dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="350dp"
        android:id="@+id/titre"
        android:layout_height="110dp"
        android:layout_above="@+id/start"
        android:layout_centerHorizontal="true" />
</RelativeLayout>